--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@
 </head>
 <body>
   <h1>Привет Дуняша!</h1>
+  <p class="article-text">С добрым утром! Пошли умываться, молиться и печь пирог!</p>
 </body>
