--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Home</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <h1>Привет Дуняша!</h1>
