--- a/index.html
+++ b/index.html
@@ -3,14 +3,7 @@
 <head>
   <title>Home</title>
   <meta charset="utf-8">
-  <style media="screen">
-    .article-text {
-      font-size: 16px;
-      background-color: skyblue;
-      color: orange;
-    }
-  </style>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h1>Привет Дуняша!</h1>
